@@ -4,6 +4,7 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import com.julscode.springecommerce.model.DetalleOrden;
 import com.julscode.springecommerce.model.Orden;
@@ -176,8 +177,7 @@ public class HomeController {
 
     @PostMapping("/search")
     public String searchProduct(@RequestParam String nombre, Model model){
-        log.info("Nombre del producto: {}" , nombre);
-        List<Producto> productos = productoService.findAll().stream().filter(p  -> p.getNombre().contains(nombre)).toList();
+        List<Producto> productos = productoService.findAll().stream().filter(p  -> p.getNombre().contains(nombre)).collect(Collectors.toList());
         model.addAttribute("productos",productos);
         return "usuario/home";
     }
